trunk/Archive2/c7/40217b48962356/output
clang version 3.4 (tags/RELEASE_34/final 206911)
Target: x86_64-unknown-linux-gnu
Thread model: posix
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.6
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.6.4
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.7
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.7.3
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.8
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.8.1
Found candidate GCC installation: /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.8.2
Found candidate GCC installation: /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0
Selected GCC installation: /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0
 "/usr/local/bin/clang" -cc1 -triple x86_64-unknown-linux-gnu -emit-obj -disable-free -disable-llvm-verifier -main-file-name main.cpp -mrelocation-model static -fmath-errno -masm-verbose -mconstructor-aliases -munwind-tables -fuse-init-array -target-cpu x86-64 -target-linker-version 2.22 -momit-leaf-frame-pointer -v -resource-dir /usr/local/bin/../lib/clang/3.4 -internal-isystem /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0 -internal-isystem /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/x86_64-unknown-linux-gnu -internal-isystem /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/backward -internal-isystem /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/x86_64-unknown-linux-gnu/c++/4.9.0 -internal-isystem /usr/local/include -internal-isystem /usr/local/bin/../lib/clang/3.4/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -O3 -Wall -Wextra -pedantic -std=c++1y -fdeprecated-macro -fdebug-compilation-dir /tmp/1404913855-74033334 -ferror-limit 19 -fmessage-length 0 -pthread -mstackrealign -fobjc-runtime=gcc -fcxx-exceptions -fexceptions -fdiagnostics-show-option -vectorize-loops -vectorize-slp -o /tmp/main-c2962a.o -x c++ main.cpp
clang -cc1 version 3.4 based upon LLVM 3.4 default target x86_64-unknown-linux-gnu
ignoring nonexistent directory "/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/x86_64-unknown-linux-gnu/c++/4.9.0"
ignoring nonexistent directory "/include"
#include "..." search starts here:
#include <...> search starts here:
 /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0
 /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/x86_64-unknown-linux-gnu
 /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/backward
 /usr/local/include
 /usr/local/bin/../lib/clang/3.4/include
 /usr/include/x86_64-linux-gnu
 /usr/include
End of search list.
main.cpp:15:12: error: no viable overloaded '='
  test1[1] = std::make_unique<Foo>();
  ~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/unique_ptr.h:357:19: note: candidate function not viable: 'this' argument has type 'const std::unique_ptr<Foo, std::default_delete<Foo> >', but method is not marked const
      unique_ptr& operator=(const unique_ptr&) = delete;
                  ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/unique_ptr.h:249:7: note: candidate function not viable: 'this' argument has type 'const std::unique_ptr<Foo, std::default_delete<Foo> >', but method is not marked const
      operator=(unique_ptr&& __u) noexcept
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/unique_ptr.h:269:2: note: candidate function not viable: 'this' argument has type 'const std::unique_ptr<Foo, std::default_delete<Foo> >', but method is not marked const
        operator=(unique_ptr<_Up, _Ep>&& __u) noexcept
        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/unique_ptr.h:278:7: note: candidate function not viable: 'this' argument has type 'const std::unique_ptr<Foo, std::default_delete<Foo> >', but method is not marked const
      operator=(nullptr_t) noexcept
      ^
In file included from main.cpp:1:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/unordered_map:41:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/tuple:1094:9: error: reference to type 'const std::unique_ptr<Foo, std::default_delete<Foo> >' requires an initializer
        second(std::forward<_Args2>(std::get<_Indexes2>(__tuple2))...)
        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/tuple:1081:9: note: in instantiation of function template specialization 'std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &>::pair<int &&, 0>' requested here
      : pair(__first, __second,
        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ext/new_allocator.h:120:23: note: in instantiation of function template specialization 'std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &>::pair<int &&>' requested here
        { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
                             ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/alloc_traits.h:253:8: note: in instantiation of function template specialization '__gnu_cxx::new_allocator<std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &> >::construct<std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &>, const std::piecewise_construct_t &, std::tuple<int &&>, std::tuple<> >' requested here
        { __a.construct(__p, std::forward<_Args>(__args)...); }
              ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/alloc_traits.h:399:4: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &> > >::_S_construct<std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &>, const std::piecewise_construct_t &, std::tuple<int &&>, std::tuple<> >' requested here
        { _S_construct(__a, __p, std::forward<_Args>(__args)...); }
          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/hashtable_policy.h:1957:28: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &> > >::construct<std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &>, const std::piecewise_construct_t &, std::tuple<int &&>, std::tuple<> >' requested here
            __value_alloc_traits::construct(__a, __n->_M_valptr(),
                                  ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/hashtable_policy.h:627:15: note: in instantiation of function template specialization 'std::__detail::_Hashtable_alloc<std::allocator<std::__detail::_Hash_node<std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &>, false> > >::_M_allocate_node<const std::piecewise_construct_t &, std::tuple<int &&>, std::tuple<> >' requested here
          __p = __h->_M_allocate_node(std::piecewise_construct,
                     ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/unordered_map.h:631:16: note: in instantiation of member function 'std::__detail::_Map_base<int, std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &>, std::allocator<std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &> >, std::__detail::_Select1st, std::equal_to<int>, std::hash<int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true>, true>::operator[]' requested here
      { return _M_h[std::move(__k)]; }
               ^
main.cpp:15:8: note: in instantiation of member function 'std::unordered_map<int, const std::unique_ptr<Foo, std::default_delete<Foo> > &, std::hash<int>, std::equal_to<int>, std::allocator<std::pair<const int, const std::unique_ptr<Foo, std::default_delete<Foo> > &> > >::operator[]' requested here
  test1[1] = std::make_unique<Foo>();
       ^
2 errors generated.
1
